src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Country_of_Residence__c</fullName>
        <label>Country of Residence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_of_nationality__c</fullName>
        <label>Country of nationality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_EBS_ID__c</fullName>
        <formula>CreatedBy.EBSUserId__c</formula>
        <label>Created By EBS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Bank_Account_No__c</fullName>
        <label>Current Bank Account No</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Bank_Details_Account_No__c</fullName>
        <label>Current Bank Details: Account No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Bank_Details_Date_Acc_Opened__c</fullName>
        <label>Current Bank Details: Date Acc Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Bank_Details_Keep_Open__c</fullName>
        <description>Current bank details: Do you wish to transfer your Current Account to IBB?</description>
        <label>Current Bank Details: Keep Open</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Bank_Details_Name_of_Bank__c</fullName>
        <label>Current Bank Details: Name of Bank</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Bank_Details_Sort_Code__c</fullName>
        <label>Current Bank Details: Sort Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Bank_Name__c</fullName>
        <label>Current Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Bank_Sort_Code__c</fullName>
        <label>Current Bank Sort Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_amount_outstanding_on_mortgage__c</fullName>
        <label>Current amount outstanding on mortgage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_bank_detail_is_keep_open__c</fullName>
        <label>Current bank detail is keep open</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_monthly_mortgage_payment__c</fullName>
        <label>Current monthly mortgage payment?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Address_Country__c</fullName>
        <label>Country of residence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_District__c</fullName>
        <label>Customer Address District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_House_No__c</fullName>
        <label>Customer Address House No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_Street__c</fullName>
        <label>Customer Address Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Card_Details__c</fullName>
        <label>Customer Card Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>Diners Card</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>Visa Card</fullName>
                </value>
                <value>
                    <fullName>Store Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Default_Branch__c</fullName>
        <label>Customer Default Branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alum Rock</fullName>
                </value>
                <value>
                    <fullName>Coventry Road - Birmingham</fullName>
                </value>
                <value>
                    <fullName>DEWSBURY</fullName>
                </value>
                <value>
                    <fullName>East Ham London</fullName>
                </value>
                <value>
                    <fullName>Edgware Road - London</fullName>
                </value>
                <value>
                    <fullName>GLASGOW</fullName>
                </value>
                <value>
                    <fullName>Head Office Birmingham</fullName>
                </value>
                <value>
                    <fullName>London Road - Leicester</fullName>
                </value>
                <value>
                    <fullName>LUTON</fullName>
                </value>
                <value>
                    <fullName>Manchester</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Private Clients Division</fullName>
                </value>
                <value>
                    <fullName>Southall - London</fullName>
                </value>
                <value>
                    <fullName>TOOTING</fullName>
                </value>
                <value>
                    <fullName>UIFM Internet Connec</fullName>
                </value>
                <value>
                    <fullName>Whitechapel - London</fullName>
                </value>
                <value>
                    <fullName>Knightsbridge Branch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>IF(  RecordType.Id  = &apos;012D0000000QQfr&apos;,  Name ,  FullName__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>EBS Customer Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Prev_Previous_Address_District__c</fullName>
        <label>Customer Prev Previous Address District</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Previous_Address_District__c</fullName>
        <label>Customer Previous Address District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Risk_Rating__c</fullName>
        <description>Customer rating used on customer type geographical location, employments status and type.</description>
        <label>Customer Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individuals</fullName>
                    <default>true</default>
                    <label>Individuals</label>
                </value>
                <value>
                    <fullName>Head Office (AA)</fullName>
                </value>
                <value>
                    <fullName>Branch (AB)</fullName>
                </value>
                <value>
                    <fullName>Subsidiary (AD)</fullName>
                </value>
                <value>
                    <fullName>Correspondent Bank (BA)</fullName>
                </value>
                <value>
                    <fullName>Commercial Bank (BB)</fullName>
                </value>
                <value>
                    <fullName>Central Bank (BC)</fullName>
                </value>
                <value>
                    <fullName>Clearing House (BP)</fullName>
                </value>
                <value>
                    <fullName>Finance Company (BQ)</fullName>
                </value>
                <value>
                    <fullName>Commodity Broker (BR)</fullName>
                </value>
                <value>
                    <fullName>Security Broker and Dealer (BS)</fullName>
                </value>
                <value>
                    <fullName>Investment Broker (BT)</fullName>
                </value>
                <value>
                    <fullName>Building Society (BV)</fullName>
                </value>
                <value>
                    <fullName>Insurance Company (BW)</fullName>
                </value>
                <value>
                    <fullName>Other Financial Institutions (BZ)</fullName>
                </value>
                <value>
                    <fullName>Limited Company (CA)</fullName>
                </value>
                <value>
                    <fullName>Partnership (CS)</fullName>
                </value>
                <value>
                    <fullName>Local Authorities (DC)</fullName>
                </value>
                <value>
                    <fullName>Individuals (EA)</fullName>
                </value>
                <value>
                    <fullName>Minors (EB)</fullName>
                </value>
                <value>
                    <fullName>Staff (EC)</fullName>
                </value>
                <value>
                    <fullName>Sole Trader (ED)</fullName>
                </value>
                <value>
                    <fullName>VIPs (EJ)</fullName>
                </value>
                <value>
                    <fullName>High Net Worth Individuals (EE)</fullName>
                </value>
                <value>
                    <fullName>Non Profit Organisations (FA)</fullName>
                </value>
                <value>
                    <fullName>Masjid (FB)</fullName>
                </value>
                <value>
                    <fullName>Trust (FC)</fullName>
                </value>
                <value>
                    <fullName>Charity (UK) (FD)</fullName>
                </value>
                <value>
                    <fullName>Co-operatives (FE)</fullName>
                </value>
                <value>
                    <fullName>Club and Associates (FF)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_happy_to_participate_in_survey__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Customer happy to participate in survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Converted_to_Customer__c</fullName>
        <label>Date Converted to Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Employment_Commenced_2__c</fullName>
        <label>Date Employment Commenced 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Employment_Commenced__c</fullName>
        <label>Date Employment Commenced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Fact_Find_Completed__c</fullName>
        <label>Date Fact Find Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Proof_of_Address_Verified__c</fullName>
        <inlineHelpText>This is for ID that couldn&apos;t be verified through eKYC</inlineHelpText>
        <label>Date Proof of Address Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Proof_of_ID_Verified__c</fullName>
        <inlineHelpText>This is for proof of identification that couldn&apos;t be verified through eKYC</inlineHelpText>
        <label>Date Proof of ID Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Survey_Sent__c</fullName>
        <label>Date Survey Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_arrears_repaid__c</fullName>
        <label>Date arrears repaid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_business_began_operating__c</fullName>
        <description>Used for NPAA Business Details page</description>
        <label>Date business began operating</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_current_bank_account_opened__c</fullName>
        <label>Date current bank account opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_discharged_v1__c</fullName>
        <label>Date discharged?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_moved_to_address__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date moved to address</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_moved_to_prev_previous_address__c</fullName>
        <label>Date moved to prev previous address</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_moved_to_previous_address__c</fullName>
        <label>Date moved to previous address</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_moved_to_registered_address__c</fullName>
        <description>For use with NPAA build</description>
        <label>Date moved to registered address</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_moved_to_this_property__c</fullName>
        <label>Date moved to this property?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_bankrutcy__c</fullName>
        <label>Date of bankrutcy?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_current_account_opened__c</fullName>
        <label>Date of current account opened?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_highest_arrears__c</fullName>
        <label>Date of highest arrears</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_visa_expiry__c</fullName>
        <label>Date of visa expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_at_current_and_previous_address__c</fullName>
        <formula>TODAY()- IF(ISBLANK(Date_moved_to_previous_address__c ),Date_moved_to_address__c,Date_moved_to_previous_address__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days at Current and Previous Address</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Branch__c</fullName>
        <label>Default Branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Head Office Birmingham (1100)</fullName>
                </value>
                <value>
                    <fullName>Alum Rock (1102)</fullName>
                </value>
                <value>
                    <fullName>Manchester (1301)</fullName>
                </value>
                <value>
                    <fullName>Coventry Road - Birmingham (1101)</fullName>
                </value>
                <value>
                    <fullName>East Ham London (1215)</fullName>
                </value>
                <value>
                    <fullName>Edgware Road - London (1201)</fullName>
                </value>
                <value>
                    <fullName>London Road - Leicester (1120)</fullName>
                </value>
                <value>
                    <fullName>Southall - London (1202)</fullName>
                </value>
                <value>
                    <fullName>Whitechapel - London (1210)</fullName>
                </value>
                <value>
                    <fullName>Premier (1550)</fullName>
                </value>
                <value>
                    <fullName>Private Clients Division (1500)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_against_you__c</fullName>
        <label>Default against you</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_number__c</fullName>
        <label>Default number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dependent_Children__c</fullName>
        <label>Dependent Children</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Director_Shareholder_Both_2__c</fullName>
        <description>NPAA</description>
        <label>Director / Shareholder / Both 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Shareholder</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Director_Shareholder_Both__c</fullName>
        <description>NPAA</description>
        <label>Director / Shareholder / Both</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Shareholder</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_2_years_of_accounts__c</fullName>
        <label>Do you have 3 years of accounts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_3_yrs_of_self_ass_tax_form__c</fullName>
        <label>Do you have 3 yrs of self-ass tax form?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_a_mortgage__c</fullName>
        <label>Do you have a mortgage?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_an_account_with_another_bank__c</fullName>
        <label>Do you have an account with another bank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_an_existing_mortgage__c</fullName>
        <label>Do you have an existing mortgage?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_another_income_eg_pension__c</fullName>
        <label>Do you have another income eg pension?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_home_finance_mortgage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please tick if you have a mortgage or a Home Purchase Plan</inlineHelpText>
        <label>Do you have home finance/Mortgage?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_have_savings_elsewhere__c</fullName>
        <label>Do you have savings elsewhere?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_hold_any_debit_card__c</fullName>
        <description>NPAA</description>
        <label>Do you hold any debit card</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Issue_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Document issue date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Does_the_SPV_exist__c</fullName>
        <description>For use with NPAA build</description>
        <label>Does the SPV exist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dual_Nationality_Held__c</fullName>
        <label>Dual Nationality Held</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EBS_Customer_Status__c</fullName>
        <label>EBS Customer Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_ID__c</fullName>
        <externalId>true</externalId>
        <label>EBS ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employer_Address_House_No__c</fullName>
        <label>Employer Address House No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Address_Line_1__c</fullName>
        <label>Employer Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Address_Line_2__c</fullName>
        <label>Employer Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Address_Line_3__c</fullName>
        <label>Employer Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Country_2__c</fullName>
        <label>Employer Country 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Country__c</fullName>
        <label>Employer Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name_2__c</fullName>
        <label>Employer Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Post_Code_2__c</fullName>
        <label>Employer Post Code 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Post_Code__c</fullName>
        <label>Employer Post Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_s_Phone2__c</fullName>
        <label>Employers&apos; Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_s_Phone__c</fullName>
        <label>Employer&apos;s Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employers_Address_Line_1__c</fullName>
        <label>Employers Address Line 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employers_Address_Line_2__c</fullName>
        <label>Employers Address Line 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employers_Address_Line_3__c</fullName>
        <label>Employers Address Line 3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employers_Country__c</fullName>
        <label>Employers Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employers_Name__c</fullName>
        <label>Employers Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employers_Post_Code__c</fullName>
        <label>Employers Post Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>